--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "heroku-postbuild": "cd resthere-frontend && npm install && npm run build"
   },
   "engines": {
-  "node": "20",
-  "npm": "10"
+  "node": "20.x",
+  "npm": "10.x"
 },
   "keywords": [],
   "author": "",
