--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "Server.js",
   "scripts": {
-    "start": "node Server.js",
+    "start": "node resthere-backend/Server.js",
     "heroku-postbuild": "cd resthere-frontend && npm install && npm run build"
   },
   "engines": {
